# tinympc

./: CMakeLists.txt  README.md  tinympcConfig.cmake
examples/: animate_inverted_pendulum_cart.py  example.cpp  inverted_pendulum_cart.cpp  plot.py  tinympc_example.cpp  twostate_example.cpp
include/: discretize.hpp  mpc.hpp
test/: main.cpp
